--- a/Scripts/10_Final-Results.Rmd
+++ b/Scripts/10_Final-Results.Rmd
@@ -52,9 +52,10 @@ figure_mericarp_model1 <- ggarrange(ggplot_length,
                                     ggplot_depth,
                                     ggplot_spine,
                                     ggplot_lower,
-                                    labels = c("A", "B", "C", "D", "E"),
+                                    labels = c("A", "B", "C", "D","E"),
                                     ncol = 3,
-                                    nrow = 2)
+                                    nrow = 2) + 
+  theme(text = element_text(family = "Noto Sans"))
                                     
 
 figure_mericarp_model1
@@ -151,15 +152,15 @@ table7 <- dplyr::slice(table7, (-c(2)))
 
 We found that leaves in island populations are longer, and have more leaflets than leaves in mainland populations. Leaves on islands are 20% longer, their leaflets are 7.5% larger and they have approximately 11% more leaflets than mainland populations ($X^2$ = 21.86, p = \<0.001; $X^2$ = 4.86, p = 0.027; $X^2$ = 39.61, p = \<0.001). The effects of year were also significant for all three traits. ($X^2$ = 6.50 p = \<0.001; $X^2$ = 4.86, p = \<0.001).
 
-```{r Univariate Model 1 Leaf, echo=FALSE, fig.cap= "Estimated means of leaf traits between island and mainland populations.", fig.width= 10, fig.height=3}
+```{r Univariate Model 1 Leaf, echo=FALSE, fig.cap= "Estimated means of leaf traits between island and mainland populations.", fig.height=6}
 
-figure_leaf_model1 <- ggarrange(ggplot_flower,
-                                ggplot_leaf,
+figure_leaf_model1 <- ggarrange(    ggplot_leaf,
                                     ggplot_leaflet,
                                     ggplot_leaflet_num,
+                                    ggplot_flower,
                                     labels = c("A", "B", "C", "D"),
-                                    ncol = 4,
-                                    nrow = 1)
+                                    ncol = 3,
+                                    nrow = 2)
                                     
 
 figure_leaf_model1
@@ -252,15 +253,15 @@ table10 <- dplyr::slice(table10, (-c(2)))
 
 We found that leaf length of population from the Galapagos are smaller than populations from other islands. Leaves are 22% shorter and leaflets are 18.5% shorter compared to other island populations ($X^2$ = 20.39, p = \<0.001; $X^2$ = 17.20, p = \<0.001). However there were not significant differences for the number of leaflets between Galapagos and other island populations (p = 0.17). The effect of year was not significant for both leaf and leaflet length (p = 0.44, p = 0.347).
 
-```{r Univariate Model 2 Leaf, echo=FALSE, fig.cap= "Estimated means of leaf traits between the Galapagos and other island populations.", fig.width= 10, fig.height=3}
+```{r Univariate Model 2 Leaf, echo=FALSE, fig.cap= "Estimated means of leaf traits between the Galapagos and other island populations.", fig.height=6}
 
-figure_leaf_model2 <- ggarrange(ggplot_flower2,
-                                ggplot_leaf2,
+figure_leaf_model2 <- ggarrange(    ggplot_leaf2,
                                     ggplot_leaflet2,
                                     ggplot_leaflet_num2,
+                                    ggplot_flower2,
                                     labels = c("A", "B", "C", "D"),
-                                    ncol = 4,
-                                    nrow = 1)
+                                    ncol = 3,
+                                    nrow = 2)
                                     
 
 figure_leaf_model2
@@ -428,17 +429,17 @@ table19 <- dplyr::slice(table19, (-c(2)))
 
 There is not statistically significant difference between islands with large finch beak species present and absent for all three leaf traits, leaf length, leaflet length and leaf number (p = 0.17; p = p = 0.15; p = 0.73). However there was a significant effect of year for leaf length and leaflet number ($X^2$ = 12.85, p = \<0.001; $X^2$ = 11.98, p = \<0.001). The effect of year for leaflet length was barely significant ($X^2$ = 3.7091, p = \<0.0542).
 
-```{r Univariate Model 3 Leaf, echo=FALSE, fig.cap= "Estimated means of leaf traits between finch beak communities. 1 = Presence of large finch species, *Geospiza magnirrostris* and *Geospiza cornirostris*. 0 = Absence of large finch species.", fig.width= 10, fig.height= 3}
+```{r Univariate Model 3 Leaf, echo=FALSE, fig.cap= "Estimated means of leaf traits between finch beak communities. 1 = Presence of large finch species, *Geospiza magnirrostris* and *Geospiza cornirostris*. 0 = Absence of large finch species.", fig.height= 6}
 
-figure_leaf_model3 <- ggarrange(ggplot_flower3,
+figure_leaf_model3 <- ggarrange(
                                 ggplot_leaf3,
                                     ggplot_leaflet3,
                                     ggplot_leaflet_num3,
+                                ggplot_flower3,
                                     labels = c("A", "B", "C", "D"),
-                                    ncol = 4,
-                                    nrow = 1)
+                                    ncol = 3,
+                                    nrow = 2)
                                     
-
 figure_leaf_model3
 ```
 
@@ -498,16 +499,13 @@ anova_tables <- bind_rows(mericarp_tables,
                           table19,
                           leaf_tables3)
 
-
-
-
 ```
 
 ```{r univariate table, echo=FALSE, results='asis'}
 
-writeLines("td, th { padding : 6px } th { background-color : brown ; color : white; border : 1px solid white; } td { color : brown ; border : 1px solid brown }", con = "mystyle.css")
+writeLines("td, th { padding : 6px } th { background-color : white ; color : black; border : 1px solid black; } td { color : black ; border : 1px solid black }", con = "mystyle.css")
 
-knitr::kable(anova_tables, format = "html")
+knitr::kable(anova_tables, digits = 5,  align = "c", format = "html")
 
 ```
 
@@ -521,37 +519,40 @@ knitr::kable(anova_tables, format = "html")
 
 We observed that mericarps from islands and mainlands populations differed in size and number of spines. Mericarps on islands are larger than mericarps on the mainland with depth being the variable that contributes more to the variation of mericarp size. For spines, the presence of lower spines was more related to mainland populations than to island populations and was the variable that contribute to most of the variation between the two groups.
 
-```{r Model 1 mericarp PCA biplot, echo=FALSE, fig.align='right', fig.height=6, fig.width=5, warning=FALSE, results='asis'}
+```{r Model 1 mericarp PCA biplot, echo=FALSE, fig.align='right', fig.height=6, fig.width=9, warning=FALSE, results='asis'}
 
-biplot1  <- fviz_pca_biplot(mericarp_pca, repel = T,
-                geom = c("point"),
-                habillage = mericarp_summary$mainland_island,
-                col.var = "black",
-                addEllipses = T,
-                axes = c(1,2),
-                label = "all",
-                labelsize = 5,
-                pointsize = 2.5,
-                ellipse.level = 0.95,
-                title = "Mericarps") + scale_color_manual(values = c("#85c0f9", "#0f2080")) + theme_transparent() + theme(
-                  legend.position = "top",
-                  axis.line = element_line(size = 1.2, linetype = "solid"), 
-                  axis.ticks = element_line(size = 1), 
-                  axis.title = element_text(size = 14), 
-                  axis.text = element_text(size = 12), 
-                  axis.text.x = element_text(size = 12), 
-                  plot.title = element_text(size = 18, vjust = 2.5),
-                  legend.text = element_text(size = 12, face = "bold"), 
-                  legend.title = element_text(size = 14, face = "bold"), 
-                  legend.background = element_rect(fill = NA, size = 0)) + 
-  theme(plot.title = element_text(hjust = 0),
-        text = element_text(family = "Noto Sans", face = "bold")) + ylim(-4.5, 4.5) + xlim(-4,6)
+biplot1 <- fviz_pca_biplot(mericarp_pca,
+                                 # Fill individuals by groups
+                                 title = "Mericarps
+                           ",
+                                 geom.ind = "point",
+                                 pointshape = c(21),
+                                 pointsize = 3,
+                                 stroke = 1.5,
+                                 fill.ind = mericarp_summary$mainland_island,
+                                 col.ind = "black",
+                                 # Color variable by groups
+                                 legend.title = "Model 1",
+                                 repel = T,
+                                 col.var = "black",
+                                 labelsize = 5,
+                                 addEllipses = T,
+                                 palette = c("#f5793a", "#a95aa1", "#85c0f9", "#0f2080", "#009e73"),
+                           
+                                 ) + theme_transparent() + 
+      scale_color_manual(values = c("#f5793a", "#a95aa1", "#85c0f9", "#0f2080", "#009e73")) +
+      # PCA theme, adds custom font and sizes that matches the other plots    
+  theme(axis.line = element_line(linetype = "solid", size = 1.5), 
+        axis.title = element_text(size = 14, face = "bold"), 
+        axis.text = element_text(size = 12), 
+        axis.text.x = element_text(size = 11), 
+        plot.title = element_text(size = 16, face = "bold", hjust = 0),
+        text = element_text(family = "Noto Sans"),
+        legend.text = element_text(size = 12, face = "bold"), 
+        legend.title = element_text(size = 14, face = "bold"),
+        legend.position = "none",
+        legend.background = element_rect(fill = NA, size = 0))
 
-# var1 <- fviz_pca_var(mericarp_pca,
-#              col.var = "contrib",
-#              gradient.cols = c("#00AFBB", "#E7B800", "#FC4E07"),
-#              repel = TRUE 
-#              ) +labs(title = "Variables - Model 1: PCA Mericarps")
 
 biplot1
 # var1
@@ -578,51 +579,56 @@ kable_styling(
 
 Leaves are larger on islands than in the mainland. This size difference also contributes to the number of leaflets present, with island populations habving more. This trait is the main difference between the two groups.
 
-```{r Model 1 PCA Leaf, echo=FALSE, fig.align='right', fig.height=5, fig.width=5, results='asis'}
+```{r Model 1 PCA Leaf, echo=FALSE, fig.align='right', fig.height=5, fig.width=9, results='asis'}
 
 #Biplot
-biplot2  <- fviz_pca_biplot(leaf_pca, repel = T,
-                geom = c("point"),
-                habillage = leaf_summary$mainland_island,
-                col.var = "black",
-                addEllipses = T,
-                axes = c(1,2),
-                label = "all",
-                labelsize = 5,
-                pointsize = 2.5,
-                ellipse.level = 0.95,
-                title = "Leaves") + scale_color_manual(values = c("#85c0f9", "#0f2080")) + theme_transparent() + theme(
-                  legend.position = "top",
-                  axis.line = element_line(size = 1.2, linetype = "solid"), 
-                  axis.ticks = element_line(size = 1), 
-                  axis.title = element_text(size = 14), 
-                  axis.text = element_text(size = 12), 
-                  axis.text.x = element_text(size = 12), 
-                  plot.title = element_text(size = 18, vjust = 2.5),
-                  legend.text = element_text(size = 12, face = "bold"), 
-                  legend.title = element_text(size = 14, face = "bold"), 
-                  legend.background = element_rect(fill = NA, size = 0)) + 
-  theme(plot.title = element_text(hjust = 0),
-        text = element_text(family = "Noto Sans", face = "bold")) + ylim(-4.5, 4.5)
 
+biplot2 <- fviz_pca_biplot(leaf_pca,
+                                 # Fill individuals by groups
+                                 title = "Leaves
+                           ",
+                                 geom.ind = "point",
+                                 pointshape = c(21),
+                                 pointsize = 3,
+                                 stroke = 1.5,
+                                 fill.ind = leaf_summary$mainland_island,
+                                 col.ind = "black",
+                                 # Color variable by groups
+                                 legend.title = "Model 1",
+                                 repel = T,
+                                 col.var = "black",
+                                 labelsize = 5,
+                                 addEllipses = T,
+                                 palette = c("#f5793a", "#a95aa1", "#85c0f9", "#0f2080", "#009e73"),
+                                 ) + theme_transparent() + 
+      scale_color_manual(values = c("#f5793a", "#a95aa1", "#85c0f9", "#0f2080", "#009e73")) +
+      # PCA theme, adds custom font and sizes that matches the other plots    
+  theme(axis.line = element_line(linetype = "solid", size = 1.5), 
+        axis.title = element_text(size = 14, face = "bold"), 
+        axis.text = element_text(size = 12), 
+        axis.text.x = element_text(size = 11), 
+        plot.title = element_text(size = 16, face = "bold", hjust = 0),
+        text = element_text(family = "Noto Sans"),
+        legend.text = element_text(size = 12, face = "bold"), 
+        legend.title = element_text(size = 14, face = "bold"),
+        legend.position = "none",
+        legend.justification = "left",
+        legend.direction = "vertical",
+        legend.background = element_rect(fill = NA, size = 0))
 
-# # Variables
-# var2 <- fviz_pca_var(leaf_pca,
-#              col.var = "contrib",
-#              gradient.cols = c("#00AFBB", "#E7B800", "#FC4E07"),
-#              repel = TRUE 
-# )
 
 biplot2
 #var2
 ```
 
-```{r Model 1 biplots all, echo=FALSE, fig.align='left', fig.height=8, fig.width=13, warning=FALSE}
+```{r Model 1 biplots all, echo=FALSE, fig.height=10, fig.width=8, warning=FALSE}
 model1_biplots <- ggarrange(biplot1,
                             biplot2,
                             labels = c("A", "B"),
-                            ncol = 2,
-                            nrow = 1)
+                            common.legend = T,
+                            legend = "bottom",
+                            ncol = 1,
+                            nrow = 2)
                                     
 
 model1_biplots
@@ -649,42 +655,46 @@ model1_var
 
 Leaves from the Galapagos Islands are smaller than other island populations. *Tribulus* leaves in the Galapagos are smaller and have less leaflets than other Islands.
 
-```{r Model 2 leaf PCA biplot, echo=F, fig.align='right', fig.height=5, fig.width=5, results='asis'}
+```{r Model 2 leaf PCA biplot, echo=F, fig.align='right', fig.height=5, fig.width=8, results='asis'}
 
 #Biplot
-biplot3  <- fviz_pca_biplot(leaf_pca_model2, repel = T,
-                geom = c("point"),
-                habillage = leaf_summary_model2$galapagos_other,
-                col.var = "black",
-                addEllipses = T,
-                label = "all",
-                labelsize = 5,
-                pointsize = 2.5,
-                ellipse.level = 0.95,
-                title = "Leaves") + scale_color_manual(values = c("#f5793a", "#a95aa1")) + theme_transparent() + theme(
-                  legend.position = "top",
-                  axis.line = element_line(size = 1.2, linetype = "solid"), 
-                  axis.ticks = element_line(size = 1), 
-                  axis.title = element_text(size = 14), 
-                  axis.text = element_text(size = 12), 
-                  axis.text.x = element_text(size = 12), 
-                  plot.title = element_text(size = 18, vjust = 2.5),
-                  legend.text = element_text(size = 12, face = "bold"), 
-                  legend.title = element_text(size = 14, face = "bold"), 
-                  legend.background = element_rect(fill = NA, size = 0)) + 
-  theme(plot.title = element_text(hjust = 0),
-        text = element_text(family = "Noto Sans", face = "bold"))
 
+biplot3 <- fviz_pca_biplot(leaf_pca_model2,
+                                 # Fill individuals by groups
+                                 title = "Leaves
+                           ",
+                                 geom.ind = "point",
+                                 pointshape = c(21),
+                                 pointsize = 3,
+                                 stroke = 1.5,
+                                 fill.ind = leaf_summary_model2$galapagos_other,
+                                 col.ind = "black",
+                                 # Color variable by groups
+                                 legend.title = "Model 2",
+                                 repel = T,
+                                 col.var = "black",
+                                 labelsize = 5,
+                                 addEllipses = T,
+                                 palette = c("#009e73", "#85c0f9", "#a95aa1", "#f5793a", "#0f2080"),
+                                 ) + theme_transparent() + 
+      scale_color_manual(values = c("#009e73", "#85c0f9", "#a95aa1", "#f5793a", "#0f2080")) +
+      # PCA theme, adds custom font and sizes that matches the other plots    
+  theme(axis.line = element_line(linetype = "solid", size = 1.5), 
+        axis.title = element_text(size = 14, face = "bold"), 
+        axis.text = element_text(size = 12), 
+        axis.text.x = element_text(size = 11), 
+        plot.title = element_text(size = 16, face = "bold", hjust = 0),
+        text = element_text(family = "Noto Sans"),
+        legend.text = element_text(size = 12, face = "bold"), 
+        legend.title = element_text(size = 14, face = "bold"),
+        legend.position = "bottom",
+        legend.justification = "center",
+        legend.direction = "horizontal",
+        legend.background = element_rect(fill = NA, size = 0))
 
-# # Variables
-# var3 <- fviz_pca_var(leaf_pca_model2,
-#              col.var = "contrib",
-#              gradient.cols = c("#00AFBB", "#E7B800", "#FC4E07"),
-#              repel = TRUE 
-# )
 
 biplot3
-# var3
+
 ```
 
 \newpage
@@ -697,35 +707,40 @@ The presence of lower spines is by far the trait that contributes most to the di
 
 ```{r Model 3 mericarp PCA biplot, echo=FALSE, fig.align='right', fig.height=5, fig.width=5, results='asis'}
 #Biplot
-biplot4  <- fviz_pca_biplot(mericarp_pca_model3, repel = T,
-                geom = c("point"),
-                habillage = mericarp_summary_model3$finch_beak,
-                col.var = "black",
-                addEllipses = T,
-                axes = c(1,2),
-                label = "all",
-                labelsize = 5,
-                pointsize = 2.5,
-                ellipse.level = 0.95,
-                title = "Mericarps") + scale_color_manual(values = c("#0f2080", "#a95aa1")) + theme_transparent() + theme(
-                  legend.position = "top",
-                  axis.line = element_line(size = 1.2, linetype = "solid"), 
-                  axis.ticks = element_line(size = 1), 
-                  axis.title = element_text(size = 14), 
-                  axis.text = element_text(size = 12), 
-                  axis.text.x = element_text(size = 12), 
-                  plot.title = element_text(size = 18, vjust = 2.5),
-                  legend.text = element_text(size = 12, face = "bold"), 
-                  legend.title = element_text(size = 14, face = "bold"), 
-                  legend.background = element_rect(fill = NA, size = 0),
-                  text = element_text(family = "Noto Sans", face = "bold")) + theme(plot.title = element_text(hjust = 0)) + ylim(-3.5,3.5) + xlim(-5.5,5.5)
 
-# # Variables
-# var4 <- fviz_pca_var(mericarp_pca_model3,
-#              col.var = "contrib",
-#              gradient.cols = c("#00AFBB", "#E7B800", "#FC4E07"),
-#              repel = TRUE 
-# )
+biplot4 <- fviz_pca_biplot(mericarp_pca_model3,
+                                 # Fill individuals by groups
+                                 title = "Mericarps
+                           ",
+                                 geom.ind = "point",
+                                 pointshape = c(21),
+                                 pointsize = 3,
+                                 stroke = 1.5,
+                                 fill.ind = mericarp_summary_model3$finch_beak,
+                                 col.ind = "black",
+                                 # Color variable by groups
+                                 legend.title = "Model 3",
+                                 repel = T,
+                                 col.var = "black",
+                                 labelsize = 5,
+                                 addEllipses = T,
+                                 palette = c("#0f2080", "#a95aa1", "#f5793a", "#009e73", "#85c0f9"),
+                                 ) + theme_transparent() + 
+      scale_color_manual(values = c("#0f2080", "#a95aa1", "#f5793a", "#009e73", "#85c0f9")) +
+      # PCA theme, adds custom font and sizes that matches the other plots    
+  theme(axis.line = element_line(linetype = "solid", size = 1.5), 
+        axis.title = element_text(size = 14, face = "bold"), 
+        axis.text = element_text(size = 12), 
+        axis.text.x = element_text(size = 11), 
+        plot.title = element_text(size = 16, face = "bold", hjust = 0),
+        text = element_text(family = "Noto Sans"),
+        legend.text = element_text(size = 12, face = "bold"), 
+        legend.title = element_text(size = 14, face = "bold"),
+        legend.position = "none",
+        legend.justification = "center",
+        legend.direction = "horizontal",
+        legend.background = element_rect(fill = NA, size = 0))
+
 
 biplot4
 # var4
@@ -738,46 +753,55 @@ Leaf size and leaflet number is not particularly associated with any group of fi
 ```{r Model 3 leaf PCA biplot, echo=FALSE, fig.align='right', fig.height=5, fig.width=5, results='asis'}
 
 #Biplot
-biplot5  <- fviz_pca_biplot(leaf_pca_model3, repel = T,
-                geom = c("point"),
-                habillage = leaf_summary_model3$finch_beak,
-                col.var = "black",
-                addEllipses = T,
-                label = "all",
-                labelsize = 5,
-                pointsize = 2.5,
-                ellipse.level = 0.95,
-                title = "Leaves") + scale_color_manual(values = c("#0f2080", "#a95aa1")) + theme_transparent() + theme(
-                  legend.position = "bottom",
-                  axis.line = element_line(size = 1.2, linetype = "solid"), 
-                  axis.ticks = element_line(size = 1), 
-                  axis.title = element_text(size = 14), 
-                  axis.text = element_text(size = 12), 
-                  axis.text.x = element_text(size = 12), 
-                  plot.title = element_text(size = 18, vjust = 2.5),
-                  legend.text = element_text(size = 12, face = "bold"), 
-                  legend.title = element_text(size = 14, face = "bold"), 
-                  legend.background = element_rect(fill = NA, size = 0),
-                  text = element_text(family = "Noto Sans", face = "bold")) + theme(plot.title = element_text(hjust = 0)) + ylim(-3.5,3.5) + xlim(-5.5,5.5)
 
-# # Variables
-# var5 <- fviz_pca_var(leaf_pca_model3,
-#              col.var = "contrib",
-#              gradient.cols = c("#00AFBB", "#E7B800", "#FC4E07"),
-#              repel = TRUE 
-# )
+biplot5 <- fviz_pca_biplot(leaf_pca_model3,
+                                 # Fill individuals by groups
+                                 title = "Leaves
+                           ",
+                                 geom.ind = "point",
+                                 pointshape = c(21),
+                                 pointsize = 3,
+                                 stroke = 1.5,
+                                 fill.ind = leaf_summary_model3$finch_beak,
+                                 col.ind = "black",
+                                 # Color variable by groups
+                                 legend.title = "Model 3",
+                                 repel = T,
+                                 col.var = "black",
+                                 labelsize = 5,
+                                 addEllipses = T,
+                                 palette = c("#0f2080", "#a95aa1", "#f5793a", "#009e73", "#85c0f9"),
+                                 ) + theme_transparent() + 
+      scale_color_manual(values = c("#0f2080", "#a95aa1", "#f5793a", "#009e73", "#85c0f9")) +
+      # PCA theme, adds custom font and sizes that matches the other plots    
+  theme(axis.line = element_line(linetype = "solid", size = 1.5), 
+        axis.title = element_text(size = 14, face = "bold"), 
+        axis.text = element_text(size = 12), 
+        axis.text.x = element_text(size = 11), 
+        plot.title = element_text(size = 16, face = "bold", hjust = 0),
+        text = element_text(family = "Noto Sans"),
+        legend.text = element_text(size = 12, face = "bold"), 
+        legend.title = element_text(size = 14, face = "bold"),
+        legend.position = "none",
+        legend.justification = "center",
+        legend.direction = "horizontal",
+        legend.background = element_rect(fill = NA, size = 0))
+
+
 
 biplot5
 #var5
 
 ```
 
-```{r Model 3 biplots all, echo=FALSE, fig.align='left', fig.height=8, fig.width=12}
+```{r Model 3 biplots all, echo=FALSE, fig.align='left', fig.height=10, fig.width=8}
 model3_biplots <- ggarrange(biplot4,
                             biplot5,
                             labels = c("A", "B"),
-                            ncol = 2,
-                            nrow = 1)
+                            common.legend = T,
+                            legend = "bottom",
+                            ncol = 1,
+                            nrow = 2)
                                     
 
 model3_biplots
